<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="title_activity_invisible">InvisibleActivity</string>
    <string name="stub">Waving your hand over your phone or taking it out of your pocket will automatically wake it up. The Glance screen is not shown.</string>
    <string name="case1">Waving your hand over your phone or taking it out of your pocket will automatically wake it up. The Glance screen is not shown.</string>
    <string name="case2">Waving your hand over your phone or taking it out of your pocket will display the Glance screen, which is shown for 5 seconds.</string>
    <string name="case3">Turning off the screen will display the Glance screen, which stays on until you press the back or home button.</string>
    <string name="case_disabled">Glance is disabled.</string>
    <string name="adminDescription">YOU WILL HAVE TO REVOKE GLANCE\'S DEVICE ADMINISTRATOR PERMISSIONS IF YOU WANT TO UNINSTALL IT!</string>
    
    <color name="white">#FFFFFF</color>
    
    <string name="title_activity_glance">GlanceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="label_custom_glance">Glance Screen</string>
    <string name="label_always_on">Always Shown</string>
    <string name="label_colour">Color</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_notification">Notifications</string>
    <string name="activate">Activate</string>
    <string name="autolock">Auto-Lock Screen</string>
    <string name="toggle">Toggle</string>
    
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    
    <string name="dim">Dim</string>
    <string name="normal">Normal</string>
    <string name="bright">Bright</string>
    
</resources>